# drawpyo

./: .gitignore  404.html  CONTRIBUTING.md  README.md  conftest.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  sitemap.xml  tox.ini
.github/workflows/: ci.yml  docs.yml  release.yml  test-release.yaml
Test Draw.io Charts/: .$emmpty diagram.drawio.bkp  All General Shapes.drawio  Basic Heirarchy - Copy.drawio  Basic Heirarchy.drawio  container.drawio
about/: index.html
api/architecture/: index.html
api/color_scheme/: index.html
api/edges/: index.html
api/extended_objects/: index.html
api/file/: index.html
api/objects/: index.html
api/page/: index.html
api/parsed_diagrams/: index.html
api/standard_colors/: index.html
api/text_format/: index.html
development scripts/: create_and_delete_pages.py  generate_tree_diagram.py  test_edge_creation.py  test_object_creation.py  test_objects_from_base.py  test_style_from_string.py
diagram_types/bar_charts/: index.html
diagram_types/binary_tree_diagrams/: index.html
diagram_types/legends/: index.html
diagram_types/pie_chart/: index.html
diagram_types/pie_charts/: index.html
diagram_types/tree_diagrams/: index.html
docs/: about.md  index.md
docs/api/: architecture.md  color_scheme.md  edges.md  extended_objects.md  file.md  objects.md  page.md  parsed_diagrams.md  standard_colors.md  text_format.md
docs/diagram_types/: bar_charts.md  binary_tree_diagrams.md  legends.md  pie_chart.md  pie_charts.md  tree_diagrams.md
docs/usage/: basic_usage.md  color_management.md  edges.md  extended_objects.md  load_diagrams.md  objects.md  parent_child_objects.md  shape_libs.md  text_format.md
drawpyo/: __init__.py  file.py  page.py  xml_base.py
drawpyo/diagram/: __init__.py  base_diagram.py  edges.py  objects.py  test_toml_load.py
drawpyo/diagram_types/: __init__.py  class_diagram.py  tree.py
search/: search_index.json
tests/: conftest.py  file_test.py  page_test.py  xml_base_test.py
(+109 files in other folders)
